--- a/users/package.json
+++ b/users/package.json
@@ -18,9 +18,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@domosideproject/twitter-common": "^1.0.1",
+    "@domosideproject/twitter-common": "^1.0.*",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.7",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
