--- a/infra/k8s/followships-mysql-depl.yaml
+++ b/infra/k8s/followships-mysql-depl.yaml
@@ -1,30 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: followships-mongo-depl
+  name: followships-mysql-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: followships-mongo
+      app: followships-mysql
   template:
     metadata:
       labels:
-        app: followships-mongo
+        app: followships-mysql
     spec:
       containers:
-        - name: followships-mongo
-          image: mongo
+        - name: followships-mysql
+          image: mysql
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: followships-mongo-srv
+  name: followships-mysql-srv
 spec:
   selector:
-    app: followships-mongo
+    app: followships-mysql
   ports:
     - name: db
       protocol: TCP
-      port: 27017
-      targetPort: 27017
+      port: 3306
+      targetPort: 3306
