--- a/infra/k8s/subscribeships-depl.yaml
+++ b/infra/k8s/subscribeships-depl.yaml
@@ -21,8 +21,8 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
-            - name: MONGO_URI
-              value: "mongodb://subscribeships-mongo-srv:27017/subscribeships"
+            - name: TEST_DB_URL
+              value: "mysql://root:password@localhost:3306/subscribeships-mysql-srv"
 ---
 apiVersion: v1
 kind: Service
