--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@domosideproject/twitter-common",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "shared logic used by multiple services",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -16,14 +16,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/amqplib": "^0.8.2",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/lodash.isobject": "^3.0.7",
+    "amqplib": "^0.10.3",
     "cookie-session": "^2.0.0",
     "del-cli": "^5.0.0",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash.isobject": "^3.0.2",
     "node-nats-streaming": "^0.3.2",
     "typescript": "^4.8.4"
   }
