--- a/build-notification/package.json
+++ b/build-notification/package.json
@@ -17,9 +17,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@domosideproject/twitter-common": "^1.0.13",
+    "@domosideproject/twitter-common": "^1.0.15",
     "@types/amqplib": "^0.8.2",
     "amqplib": "^0.10.3",
+    "dotenv": "^16.0.3",
     "ioredis": "^5.2.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
