add dev script in build notification server

--- a/build-notification/package.json
+++ b/build-notification/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll --no-cache"
+    "dev": "NODE_ENV=dev ts-node-dev src/index.ts",
+    "test": "NODE_ENV=test jest --watchAll --no-cache --detectOpenHandles"
   },
   "jest": {
     "preset": "ts-jest",
