--- a/users/package.json
+++ b/users/package.json
@@ -19,10 +19,13 @@
   "license": "ISC",
   "dependencies": {
     "@domosideproject/twitter-common": "^1.0.*",
+    "@types/amqplib": "^0.8.2",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.14",
     "@types/multer": "^1.4.7",
+    "amqplib": "^0.10.3",
     "cookie-session": "^2.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1",
