--- a/tweets/package.json
+++ b/tweets/package.json
@@ -19,10 +19,12 @@
   "license": "ISC",
   "dependencies": {
     "@domosideproject/twitter-common": "^1.0.*",
+    "@types/amqplib": "^0.8.2",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.14",
     "@types/mongoose": "^5.11.97",
     "@types/sequelize": "^4.28.14",
+    "amqplib": "^0.10.3",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
