--- a/replies/package.json
+++ b/replies/package.json
@@ -19,11 +19,14 @@
   "license": "ISC",
   "dependencies": {
     "@domosideproject/twitter-common": "^1.0.*",
+    "@types/amqplib": "^0.10.0",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.14",
     "@types/mongoose": "^5.11.97",
     "@types/sequelize": "^4.28.14",
+    "amqplib": "^0.10.3",
     "cookie-session": "^2.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
