--- a/likes/package.json
+++ b/likes/package.json
@@ -26,6 +26,7 @@
     "@types/sequelize": "^4.28.14",
     "amqplib": "^0.10.3",
     "cookie-session": "^2.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
