--- a/subscribeships/package.json
+++ b/subscribeships/package.json
@@ -18,11 +18,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@domosideproject/twitter-common": "^1.0.*",
+    "@domosideproject/twitter-common": "^1.0.17",
+    "@types/amqplib": "^0.10.0",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.14",
     "@types/sequelize": "^4.28.14",
+    "amqplib": "^0.10.3",
     "cookie-session": "^2.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
