--- a/subscribeships/package.json
+++ b/subscribeships/package.json
@@ -19,7 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@domosideproject/twitter-common": "^1.0.17",
-    "@types/amqplib": "^0.10.0",
+    "@types/amqplib": "^0.8.2",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.14",
     "@types/sequelize": "^4.28.14",
@@ -39,6 +39,7 @@
     "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
     "jest": "^29.2.2",
+    "mongoose": "^6.7.2",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3"
   }
