--- a/followships/package.json
+++ b/followships/package.json
@@ -18,11 +18,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@domosideproject/twitter-common": "^1.0.*",
+    "@domosideproject/twitter-common": "^1.0.17",
+    "@types/amqplib": "^0.10.0",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.14",
     "@types/sequelize": "^4.28.14",
+    "amqplib": "^0.10.3",
     "cookie-session": "^2.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
@@ -36,6 +39,7 @@
     "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
     "jest": "^29.2.2",
+    "mongoose": "^6.7.2",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3"
   }
