--- a/notify/package.json
+++ b/notify/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@domosideproject/twitter-common": "^1.0.19",
     "@types/express": "^4.17.14",
+    "@types/mongoose": "^5.11.97",
     "express": "^4.18.2",
+    "mongoose": "^6.7.2",
+    "mongoose-update-if-current": "^1.4.0",
     "socket.io": "^4.5.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
