--- a/notify/package.json
+++ b/notify/package.json
@@ -4,15 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "NODE_ENV=dev ts-node-dev src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@domosideproject/twitter-common": "^1.0.19",
+    "@types/amqplib": "^0.10.0",
     "@types/express": "^4.17.14",
     "@types/mongoose": "^5.11.97",
+    "amqplib": "^0.10.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.2",
     "mongoose-update-if-current": "^1.4.0",
