--- a/notify/package.json
+++ b/notify/package.json
@@ -10,13 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@domosideproject/twitter-common": "^1.0.19",
+    "@domosideproject/twitter-common": "^1.0.20",
     "@types/amqplib": "^0.8.2",
     "@types/express": "^4.17.14",
     "@types/mongoose": "^5.11.97",
     "amqplib": "^0.10.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ioredis": "^5.2.4",
     "mongoose": "^6.7.2",
     "mongoose-update-if-current": "^1.4.0",
     "socket.io": "^4.5.3",
