--- a/notify/package.json
+++ b/notify/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=dev ts-node-dev src/index.ts"
+    "dev": "NODE_ENV=dev ts-node-dev src/index.ts",
+    "test": "NODE_ENV=test jest --watchAll --no-cache --detectOpenHandles"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -14,14 +22,23 @@
     "@types/amqplib": "^0.8.2",
     "@types/express": "^4.17.14",
     "@types/mongoose": "^5.11.97",
+    "@types/node": "^18.11.9",
     "amqplib": "^0.10.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "ioredis": "^5.2.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "mongoose-update-if-current": "^1.4.0",
-    "socket.io": "^4.5.3",
+    "socket.io": "^4.5.0",
+    "socket.io-client": "^4.5.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.2.3",
+    "jest": "^29.3.1",
+    "mongodb-memory-server": "^8.10.0",
+    "ts-jest": "^29.0.3"
   }
 }
