--- a/build-notification/package.json
+++ b/build-notification/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "build-notification",
+  "name": "build-notifications",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node-dev src/index.ts",
     "dev": "NODE_ENV=dev ts-node-dev src/index.ts",
     "test": "NODE_ENV=test jest --watchAll --no-cache --detectOpenHandles"
   },
@@ -20,17 +21,17 @@
   "dependencies": {
     "@domosideproject/twitter-common": "^1.0.15",
     "@types/amqplib": "^0.8.2",
+    "@types/mongoose": "^5.11.97",
     "amqplib": "^0.10.3",
     "dotenv": "^16.0.3",
     "ioredis": "^5.2.4",
+    "mongoose": "^6.7.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/jest": "^29.2.2",
-    "@types/mongoose": "^5.11.97",
     "jest": "^29.3.1",
-    "mongoose": "^6.7.2",
     "ts-jest": "^29.0.3"
   }
 }
