--- a/notify/package.json
+++ b/notify/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node-dev src/index.ts",
     "dev": "NODE_ENV=dev ts-node-dev src/index.ts",
     "test": "NODE_ENV=test jest --watchAll --no-cache --detectOpenHandles"
   },
