--- a/notify/package.json
+++ b/notify/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "ts-node-dev src/index.ts",
     "dev": "NODE_ENV=dev ts-node-dev src/index.ts",
-    "test": "NODE_ENV=test jest --watchAll --no-cache --detectOpenHandles"
+    "test": "NODE_ENV=test jest --watchAll --no-cache --detectOpenHandles",
+    "test:ci": "jest"
   },
   "jest": {
     "preset": "ts-jest",
