--- a/.github/workflows/users-test.yml
+++ b/.github/workflows/users-test.yml
@@ -8,5 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - env:
+          MONGO_URL: mongodb://users-mongo-srv:27017/users
+          RABBITMQ_URL: amqp://localhost:5672
+          JWT_KEY: test
       - run: cd users && npm install && npm run test:ci
   
