--- a/.github/workflows/followships-test.yml
+++ b/.github/workflows/followships-test.yml
@@ -9,7 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - env:
-          MONGO_URL: mongodb://users-mongo-srv:27017/followships
+          MYSQL_URL: mysql://root:password@localhost:3306/test-micro-twitter-followship
           RABBITMQ_URL: amqp://localhost:5672
           JWT_KEY: test
+      - run: mysql -e 'CREATE DATABASE IF NOT EXISTS test-micro-twitter-followship default character set utf8mb4 collate utf8mb4_unicode_ci;'
       - run: cd followships && npm install && npm run test:ci
