--- a/.github/workflows/tweets-test.yml
+++ b/.github/workflows/tweets-test.yml
@@ -4,12 +4,11 @@ on:
   pull_request
 
 jobs:
-  build:
+  label_issue:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
       - env:
           MONGO_URL: mongodb://root:password@localhost:27017/tweets
           JWT_KEY: test
           RABBITMQ_URL: amqp://localhost:5672
-      - run: cd tweets && npm install && npm run test:ci
+        run: cd users && npm install && npm run test:ci
