--- a/.github/workflows/users-test.yml
+++ b/.github/workflows/users-test.yml
@@ -4,11 +4,11 @@ on:
   pull_request
 
 jobs:
-  label_issue:
+  users_tests:
     runs-on: ubuntu-latest
+    env:
+      MONGO_URL: mongodb://users-mongo-srv:27017/users
+      RABBITMQ_URL: amqp://localhost:5672
+      JWT_KEY: test    
     steps:
-      - env:
-          MONGO_URL: mongodb://users-mongo-srv:27017/users
-          RABBITMQ_URL: amqp://localhost:5672
-          JWT_KEY: test
-        run: cd users && npm install && npm run test:ci
+       - run: cd users && npm install && npm run test:ci
