--- a/.github/workflows/users-test.yml
+++ b/.github/workflows/users-test.yml
@@ -1,15 +1,21 @@
 name: users-tests
 
 on:
-  pull_request
+  pull_request:
+    paths:
+      - 'users/**'
 
 jobs:
   users_tests:
     runs-on: ubuntu-latest
     env:
-      MONGO_URL: mongodb://users-mongo-srv:27017/users
       RABBITMQ_URL: amqp://localhost:5672
-      JWT_KEY: test    
     steps:
        - uses: actions/checkout@v2
-       - run: cd users && npm install && npm run test:ci
+       - name: run rabbitmq
+       - run: docker run -it --rm --name rabbitmq -p 5672:5672 -p 15672:15672 rabbitmq:3.11-management
+       - name: run test
+       - run: |
+          cd users
+          npm install
+          npm run test:ci
