--- a/.github/workflows/users-test.yml
+++ b/.github/workflows/users-test.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
        - uses: actions/checkout@v2
        - name: run rabbitmq
-         run: docker run -it --rm --name rabbitmq -p 5672:5672 -p 15672:15672 rabbitmq:3.11-management
+         run: docker run --rm --name rabbitmq -p 5672:5672 -p 15672:15672 rabbitmq:3.11-management
        - name: run test
          run: |
           cd users
