--- a/.github/workflows/users-test.yml
+++ b/.github/workflows/users-test.yml
@@ -9,11 +9,14 @@ jobs:
   users_tests:
     runs-on: ubuntu-latest
     env:
-      RABBITMQ_URL: amqp://localhost:5672
+      RABBITMQ_URL: amqp://localhost:1883
+      
     steps:
        - uses: actions/checkout@v2
        - name: run rabbitmq
-         run: docker run --rm --name rabbitmq -p 5672:5672 -p 15672:15672 rabbitmq:3.11-management
+         uses: namoshek/rabbitmq-github-action@v1
+         with:
+          container-name: 'mqtt'
        - name: run test
          run: |
           cd users
