--- a/users/package.json
+++ b/users/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node-dev src/index.ts",
     "dev": "ts-node-dev src/index.ts",
     "test": "jest --watchAll --no-cache",
-    "test:ci": "jest"
+    "test:ci": "jest --forceExit"
   },
   "jest": {
     "preset": "ts-jest",
