--- a/.github/workflows/followships-test.yml
+++ b/.github/workflows/followships-test.yml
@@ -1,15 +1,31 @@
 name: followships-tests
 
 on:
-  pull_request
-  
+  pull_request:
+    paths:
+      - 'followships/**'
+      
+      
 jobs:
   followships_tests:
     runs-on: ubuntu-latest
-    env:
-      MYSQL_URL: mysql://root:password@localhost:3306/test-micro-twitter-followship
-      RABBITMQ_URL: amqp://localhost:5672
-      JWT_KEY: test
+    
+    services:
+      rabbitmq:
+        image: rabbitmq:latest
+        ports:
+          - 5672
+          
     steps:
       - uses: actions/checkout@v2
-      - run: mysql -e 'CREATE DATABASE IF NOT EXISTS test-micro-twitter-followship default character set utf8mb4 collate utf8mb4_unicode_ci;' && cd followships && npm install && npm run test:ci
+      - name: create database
+        run: mysql -e 'CREATE DATABASE IF NOT EXISTS test-micro-twitter-followship default character set utf8mb4 collate utf8mb4_unicode_ci;'
+      - name: run test
+        run: |
+          cd followships
+          npm install
+          npm run test:ci
+        env:
+          MYSQL_URL: mysql://root:password@127.0.0.1:3306/test-micro-twitter-followship
+          RABBITMQ_URL: "amqp://127.0.0.1:${{ job.services.rabbitmq.ports['5672'] }}"
+
