--- a/.github/workflows/tweets-test.yml
+++ b/.github/workflows/tweets-test.yml
@@ -1,14 +1,27 @@
 name: tweets-test
 
 on:
-  pull_request
+  pull_request:
+    paths:
+      - 'tweets/**'
 
 jobs:
   tweets_test:
     runs-on: ubuntu-latest
-    env:
-      MONGO_URL: mongodb://root:password@localhost:27017/tweets
-      JWT_KEY: test
-      RABBITMQ_URL: amqp://localhost:5672
+    
+    services:
+      rabbitmq:
+        image: rabbitmq.latest
+        ports:
+          - 5672
+
     steps:
-      - run: cd users && npm install && npm run test:ci
+      - uses: actions/checkout@v2
+      - name: run test
+        run: |
+          cd users
+          npm install
+          npm run test:ci
+        env:
+          RABBITMQ_URL: "amqp://127.0.0.1:${{ job.services.rabbitmq.ports['5672'] }}"
+
