--- a/.github/workflows/tweets-test.yml
+++ b/.github/workflows/tweets-test.yml
@@ -11,7 +11,7 @@ jobs:
     
     services:
       rabbitmq:
-        image: rabbitmq.latest
+        image: rabbitmq:latest
         ports:
           - 5672
 
