--- a/.github/workflows/followships-test.yml
+++ b/.github/workflows/followships-test.yml
@@ -15,17 +15,23 @@ jobs:
         image: rabbitmq:latest
         ports:
           - 5672
+      mysql:
+        image: mysql
+        env:
+          MYSQL_ROOT_PASSWORD: password
+        ports:
+          - 3306
           
     steps:
       - uses: actions/checkout@v2
       - name: create database
-        run: mysql -e 'CREATE DATABASE IF NOT EXISTS test-micro-twitter-followship default character set utf8mb4 collate utf8mb4_unicode_ci;'
+        run: mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uroot -ppassword -e 'CREATE DATABASE IF NOT EXISTS test-micro-twitter-followship default character set utf8mb4 collate utf8mb4_unicode_ci;'
       - name: run test
         run: |
           cd followships
           npm install
           npm run test:ci
         env:
-          MYSQL_URL: mysql://root:password@127.0.0.1:3306/test-micro-twitter-followship
+          MYSQL_URL: "mysql://root:password@127.0.0.1:${{ job.services.mysql.ports['3306'] }}/test-micro-twitter-followship"
           RABBITMQ_URL: "amqp://127.0.0.1:${{ job.services.rabbitmq.ports['5672'] }}"
 
