--- a/.github/workflows/followships-test.yml
+++ b/.github/workflows/followships-test.yml
@@ -39,4 +39,4 @@ jobs:
         env:
           MYSQL_URL: "mysql://root:password@127.0.0.1:${{ job.services.mysql.ports['3306'] }}/test-micro-twitter-followship"
           RABBITMQ_URL: "amqp://127.0.0.1:${{ job.services.rabbitmq.ports['5672'] }}"
-          
+          JWT_KEY: test
