--- a/.github/workflows/notify-tests.yml
+++ b/.github/workflows/notify-tests.yml
@@ -20,7 +20,7 @@ jobs:
       - name: run test
         run: |
           cd notify
-          npm run install
+          npm install
           npm run test:ci
         env:
           RABBITMQ_URL: "amqp://127.0.0.1:${{ job.services.rabbitmq.ports['5672'] }}"
