--- a/.github/workflows/build-notifications-test.yml
+++ b/.github/workflows/build-notifications-test.yml
@@ -11,7 +11,7 @@ jobs:
     
     services:
       rabbitmq:
-        image: rabbitmp:latest
+        image: rabbitmq:latest
         ports:
           - 5672
       redis:
