--- a/infra/k8s/tweets/tweets-depl.yaml
+++ b/infra/k8s/tweets/tweets-depl.yaml
@@ -56,7 +56,7 @@ spec:
                   name: tweets-configmap
                   key: mongo_host
             - name: MONGO_URL
-              value: "mongodb://$(MONGO_ROOT_USERNAME):$(MONGO_ROOT_PASSWORD)@$(MONGO_HOST)/tweets"
+              value: "mongodb://$(MONGO_ROOT_USERNAME):$(MONGO_ROOT_PASSWORD)@$(MONGO_HOST)"
       # volumes:
       #   - name: tweets-config
 ---
